[project]
name = "pdfimageextractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=2.18.2",
    "dash-extensions>=1.0.19",
    "pathvalidate>=3.2.3",
    "pypdf[image]>=5.2.0",
]
[tool.ruff]
# Target Python Version
target-version = "py310"

# Line length
line-length = 88
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # Ruff-specific rules
    "W",   # pycodestyle warnings
    "YTT", # flake8-2020
    "S",   # flake8-bandit
]

# Ignore specific rules
lint.ignore = [
    # "E501",  # line length violations
]
lint.unfixable = []  # Rules that should not be fixed automatically

# Allow autofix behavior for specific rules
fix = true

# Exclude files/folders
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

# Per-file-ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files
"tests/*" = ["S101"]      # Ignore assert statements in tests
